--- a/index.html
+++ b/index.html
@@ -1,168 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ruchitha | DevOps & SRE Engineer</title>
-  <style>
-    /* Reset and basic styles */
-    * {
-      box-sizing: border-box;
-    }
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f9f9;
-      color: #222;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-    }
-    a {
-      color: #0073e6;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    header {
-      background-color: #004080;
-      color: white;
-      padding: 1rem 2rem;
-      text-align: center;
-    }
-    header h1 {
-      margin: 0.3rem 0;
-      font-weight: 700;
-    }
-    header p {
-      margin: 0;
-      font-size: 1rem;
-      letter-spacing: 1px;
-    }
-    .container {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    section {
-      margin-bottom: 3rem;
-      background: white;
-      padding: 1.8rem 2rem;
-      box-shadow: 0 0 8px rgb(0 0 0 / 0.1);
-      border-radius: 6px;
-    }
-    h2 {
-      border-bottom: 2px solid #004080;
-      padding-bottom: 0.3rem;
-      margin-bottom: 1rem;
-      color: #004080;
-    }
-    ul {
-      padding-left: 1.2rem;
-    }
-    ul li {
-      margin-bottom: 0.5rem;
-    }
-    .contact-info {
-      font-size: 0.95rem;
-      margin-top: 0.3rem;
-    }
-    .contact-info span {
-      display: block;
-      margin: 0.15rem 0;
-    }
-    footer {
-      text-align: center;
-      font-size: 0.85rem;
-      padding: 1rem 0;
-      background: #004080;
-      color: white;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="DevOps and SRE Portfolio of Ruchitha - showcasing cloud infrastructure, CI/CD, monitoring, and automation projects">
+    <meta name="keywords" content="DevOps, SRE, Cloud Engineer, AWS, CI/CD, Monitoring, Linux, Python, Terraform, Ansible">
+    <meta name="author" content="Ruchitha">
+    <title>Ruchitha | DevOps & SRE Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #0f172a;
+            color: #f8fafc;
+            line-height: 1.6;
+        }
+
+        header {
+            padding: 2rem;
+            text-align: center;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            color: #38bdf8;
+        }
+
+        nav {
+            margin-top: 1rem;
+        }
+
+        nav a {
+            color: #94a3b8;
+            margin: 0 1rem;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        nav a:hover {
+            color: #38bdf8;
+        }
+
+        section {
+            max-width: 900px;
+            margin: auto;
+            padding: 2rem;
+        }
+
+        h2 {
+            color: #38bdf8;
+            margin-bottom: 1rem;
+        }
+
+        .project {
+            background: #1e293b;
+            padding: 1rem;
+            border-radius: 8px;
+            margin-bottom: 1.5rem;
+            transition: transform 0.3s;
+        }
+
+        .project:hover {
+            transform: translateY(-5px);
+        }
+
+        .resume-button, .contact-button {
+            background-color: #38bdf8;
+            color: #0f172a;
+            padding: 0.75rem 1.5rem;
+            border: none;
+            border-radius: 6px;
+            text-decoration: none;
+            display: inline-block;
+            margin: 1rem 0;
+            transition: background-color 0.3s;
+        }
+
+        .resume-button:hover, .contact-button:hover {
+            background-color: #0ea5e9;
+        }
+
+        footer {
+            text-align: center;
+            padding: 2rem;
+            color: #64748b;
+        }
+    </style>
 </head>
+
 <body>
+    <header>
+        <h1>Ruchitha</h1>
+        <p>DevOps & Site Reliability Engineer | Cloud Infrastructure | Automation Enthusiast</p>
+        <nav>
+            <a href="#about">About</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
-<header>
-  <h1>Ruchitha</h1>
-  <p>Aspiring DevOps & Site Reliability Engineer (SRE)</p>
-  <p>
-    <a href="https://linkedin.com/in/ruchitha-r-423409274" target="_blank" rel="noopener noreferrer">LinkedIn</a> |  
-    <a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a> |  
-    Mobile: +91 63034 76240 / +91 83408 94285
-  </p>
-</header>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I am a passionate DevOps/SRE Engineer with hands-on experience in building cloud-native infrastructure, automating deployments, and monitoring systems for performance and reliability. With a strong foundation in AWS, Linux, CI/CD, and scripting, I aim to reduce toil, improve uptime, and ensure continuous delivery across scalable platforms.</p>
+        <a href="Ruchitha_Resume.pdf" class="resume-button" target="_blank">Download Resume</a>
+    </section>
 
-<div class="container">
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li><strong>Cloud:</strong> AWS (EC2, S3, VPC, IAM, CloudWatch, CloudFormation)</li>
+            <li><strong>DevOps:</strong> Jenkins, GitHub Actions, Docker, Kubernetes</li>
+            <li><strong>Automation:</strong> Terraform, Ansible, Shell Scripting, Python</li>
+            <li><strong>Monitoring:</strong> Prometheus, Nagios, Amazon CloudWatch</li>
+            <li><strong>Other Tools:</strong> Git, GitLab, Bitbucket, Maven</li>
+        </ul>
+    </section>
 
-  <section id="career-objective">
-    <h2>Career Objective</h2>
-    <p>Aspiring DevOps / Site Reliability Engineer (SRE) with hands-on experience in cloud infrastructure management, server monitoring, and CI/CD pipeline automation. Proficient in AWS, Linux, Shell Scripting, and Python, with practical knowledge of infrastructure automation and cloud-native tools. Experienced in real-time server health monitoring, log analysis, and deployment automation using CI/CD pipelines. Skilled in implementing DevOps best practices, maintaining system uptime, and enabling scalable, reliable deployments. Passionate about SRE principles, including incident response, observability, and automating toil. Eager to contribute to dynamic and high-performance DevOps/SRE teams.</p>
-  </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Server Health Monitor & Auto Healing</h3>
+            <p>Implemented real-time server monitoring using Prometheus and CloudWatch. Integrated alerting with SNS and Slack. Configured auto-healing using EC2 Auto Scaling.</p>
+        </div>
+        <div class="project">
+            <h3>CI/CD Pipeline Automation</h3>
+            <p>Designed robust pipelines using Jenkins and GitHub Actions for application builds, testing, and deployment. Integrated Docker containers and Terraform for seamless infrastructure updates.</p>
+        </div>
+        <div class="project">
+            <h3>User & Group Management System</h3>
+            <p>Developed Bash scripts for automated creation and management of users and groups on Linux systems, with role-based access and logging.</p>
+        </div>
+    </section>
 
-  <section id="work-experience">
-    <h2>Work Experience</h2>
-    <h3>OnPassive Private Limited</h3>
-    <p><strong>Associate Cloud Engineer</strong> | July 2023 – Present</p>
-    <ul>
-      <li>Designed and maintained CI/CD pipelines using Jenkins, Git, and GitHub Actions to automate build, test, and deployment workflows.</li>
-      <li>Monitored application and server performance with Amazon CloudWatch, Nagios, and Prometheus; configured alerting and logging for proactive issue detection.</li>
-      <li>Managed AWS cloud infrastructure (EC2, S3, IAM, VPC, CloudFormation) to enable scalable and secure environments.</li>
-      <li>Automated server provisioning, configuration, and maintenance tasks using Shell Scripting and Python, improving deployment speed and consistency.</li>
-      <li>Implemented Infrastructure as Code (IaC) with Terraform and Ansible for repeatable, version-controlled environment provisioning.</li>
-      <li>Collaborated with development teams to integrate DevOps practices into SDLC, supporting agile methodologies and continuous delivery.</li>
-      <li>Participated in on-call rotations, conducted incident response, and performed root cause analysis to improve system reliability and reduce MTTR.</li>
-      <li>Authored detailed documentation for deployment processes, system monitoring, and incident resolution to facilitate knowledge sharing and onboarding.</li>
-    </ul>
-  </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a></p>
+        <p>Phone: +91 6303476240 / +91 8340894285</p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/ruchitha-r-423409274" target="_blank">ruchitha-r-423409274</a></p>
+        <a href="mailto:ruchithakatakm99@gmail.com" class="contact-button">Let's Connect</a>
+    </section>
 
-  <section id="technical-skills">
-    <h2>Technical Skills</h2>
-    <ul>
-      <li><strong>Cloud & Infrastructure:</strong> AWS (EC2, ELB, SNS, CloudFormation, Auto Scaling, CloudFront, S3, Elastic Beanstalk)</li>
-      <li><strong>DevOps Tools:</strong> Docker, Jenkins, Kubernetes, Ansible, Terraform</li>
-      <li><strong>Version Control:</strong> Git, GitHub, GitLab, Bitbucket</li>
-      <li><strong>CI/CD:</strong> Jenkins, GitHub Actions</li>
-      <li><strong>Build Tools:</strong> Maven</li>
-      <li><strong>Operating Systems:</strong> Linux, Windows</li>
-      <li><strong>Programming Languages:</strong> Python, C, Java, JavaScript</li>
-      <li><strong>Office Tools:</strong> MS Office (Outlook, Word, Excel, PowerPoint)</li>
-    </ul>
-  </section>
-
-  <section id="education">
-    <h2>Education</h2>
-    <p><strong>B.Tech in Electrical and Electronics Engineering</strong></p>
-    <p>Swami Ramananda Teertha Institute of Science and Technology — July 2021 | CGPA: 8.4</p>
-    <p><strong>Intermediate (Class 12)</strong></p>
-    <p>Gowthami Junior College — May 2017 | 97.2%</p>
-    <p><strong>S.S.C (Class 10)</strong></p>
-    <p>Krishnaveni Talent School — May 2015 | CGPA: 9.8</p>
-  </section>
-
-  <section id="strengths">
-    <h2>Strengths</h2>
-    <ul>
-      <li>Strong communication and interpersonal skills</li>
-      <li>Effective inter-team coordination and management</li>
-      <li>Quick learner and adaptive to new technologies and work environments</li>
-    </ul>
-  </section>
-
-  <section id="personal-details">
-    <h2>Personal Details</h2>
-    <p><strong>Date of Birth:</strong> 10-09-1999</p>
-    <p><strong>Languages Known:</strong> English, Hindi, Telugu</p>
-    <p><strong>Permanent Address:</strong> H No: 7-13A/3, Hanuman Nagar, Chandur, Hyderabad, Telangana - 508255</p>
-  </section>
-
-</div>
-
-<footer>
-  &copy; 2025 Ruchitha. All rights reserved.
-</footer>
-
+    <footer>
+        <p>&copy; 2025 Ruchitha. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
