--- a/index.html
+++ b/index.html
@@ -2,155 +2,164 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="DevOps and SRE Portfolio of Ruchitha - showcasing cloud infrastructure, CI/CD, monitoring, and automation projects">
-    <meta name="keywords" content="DevOps, SRE, Cloud Engineer, AWS, CI/CD, Monitoring, Linux, Python, Terraform, Ansible">
-    <meta name="author" content="Ruchitha">
-    <title>Ruchitha | DevOps & SRE Portfolio</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="DevOps and SRE Portfolio of Ruchitha - showcasing cloud infrastructure, CI/CD, monitoring, and automation projects">
+  <meta name="keywords" content="DevOps, SRE, Cloud Engineer, AWS, CI/CD, Monitoring, Linux, Python, Terraform, Ansible">
+  <meta name="author" content="Ruchitha">
+  <title>Ruchitha | DevOps & SRE Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #0f172a;
-            color: #f8fafc;
-            line-height: 1.6;
-        }
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #0f172a;
+      color: #f8fafc;
+      line-height: 1.6;
+    }
 
-        header {
-            padding: 2rem;
-            text-align: center;
-        }
+    header {
+      padding: 2rem;
+      text-align: center;
+    }
 
-        header h1 {
-            font-size: 2.5rem;
-            color: #38bdf8;
-        }
+    header h1 {
+      font-size: 2.5rem;
+      color: #38bdf8;
+    }
 
-        nav {
-            margin-top: 1rem;
-        }
+    nav {
+      margin-top: 1rem;
+    }
 
-        nav a {
-            color: #94a3b8;
-            margin: 0 1rem;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
+    nav a {
+      color: #94a3b8;
+      margin: 0 1rem;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
 
-        nav a:hover {
-            color: #38bdf8;
-        }
+    nav a:hover {
+      color: #38bdf8;
+    }
 
-        section {
-            max-width: 900px;
-            margin: auto;
-            padding: 2rem;
-        }
+    section {
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem;
+    }
 
-        h2 {
-            color: #38bdf8;
-            margin-bottom: 1rem;
-        }
+    h2 {
+      color: #38bdf8;
+      margin-bottom: 1rem;
+    }
 
-        .project {
-            background: #1e293b;
-            padding: 1rem;
-            border-radius: 8px;
-            margin-bottom: 1.5rem;
-            transition: transform 0.3s;
-        }
+    .project {
+      background: #1e293b;
+      padding: 1rem;
+      border-radius: 8px;
+      margin-bottom: 1.5rem;
+      transition: transform 0.3s;
+    }
 
-        .project:hover {
-            transform: translateY(-5px);
-        }
+    .project:hover {
+      transform: translateY(-5px);
+    }
 
-        .resume-button, .contact-button {
-            background-color: #38bdf8;
-            color: #0f172a;
-            padding: 0.75rem 1.5rem;
-            border: none;
-            border-radius: 6px;
-            text-decoration: none;
-            display: inline-block;
-            margin: 1rem 0;
-            transition: background-color 0.3s;
-        }
+    .resume-button, .contact-button {
+      background-color: #38bdf8;
+      color: #0f172a;
+      padding: 0.75rem 1.5rem;
+      border: none;
+      border-radius: 6px;
+      text-decoration: none;
+      display: inline-block;
+      margin: 1rem 0;
+      transition: background-color 0.3s;
+    }
 
-        .resume-button:hover, .contact-button:hover {
-            background-color: #0ea5e9;
-        }
+    .resume-button:hover, .contact-button:hover {
+      background-color: #0ea5e9;
+    }
 
-        footer {
-            text-align: center;
-            padding: 2rem;
-            color: #64748b;
-        }
-    </style>
+    footer {
+      text-align: center;
+      padding: 2rem;
+      color: #64748b;
+    }
+
+    img.project-img {
+      width: 100%;
+      border-radius: 6px;
+      margin-top: 0.5rem;
+    }
+  </style>
 </head>
 
 <body>
-    <header>
-        <h1>Ruchitha</h1>
-        <p>DevOps & Site Reliability Engineer | Cloud Infrastructure | Automation Enthusiast</p>
-        <nav>
-            <a href="#about">About</a>
-            <a href="#skills">Skills</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
+  <header>
+    <h1>Ruchitha</h1>
+    <p>DevOps & Site Reliability Engineer | Cloud Infrastructure | Automation Enthusiast</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I am a passionate DevOps/SRE Engineer with hands-on experience in building cloud-native infrastructure, automating deployments, and monitoring systems for performance and reliability. With a strong foundation in AWS, Linux, CI/CD, and scripting, I aim to reduce toil, improve uptime, and ensure continuous delivery across scalable platforms.</p>
-        <a href="Ruchitha_Resume.pdf" class="resume-button" target="_blank">Download Resume</a>
-    </section>
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I am a dedicated DevOps/SRE Engineer with a strong passion for building robust systems. I specialize in AWS, CI/CD pipelines, infrastructure as code, and proactive monitoring. My goal is to ensure stability and rapid delivery across cloud-native environments. I’m always eager to learn and automate everything possible to reduce toil and enhance scalability.</p>
+    <a href="Ruchitha_Resume.pdf" class="resume-button" target="_blank">Download Resume</a>
+  </section>
 
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li><strong>Cloud:</strong> AWS (EC2, S3, VPC, IAM, CloudWatch, CloudFormation)</li>
-            <li><strong>DevOps:</strong> Jenkins, GitHub Actions, Docker, Kubernetes</li>
-            <li><strong>Automation:</strong> Terraform, Ansible, Shell Scripting, Python</li>
-            <li><strong>Monitoring:</strong> Prometheus, Nagios, Amazon CloudWatch</li>
-            <li><strong>Other Tools:</strong> Git, GitLab, Bitbucket, Maven</li>
-        </ul>
-    </section>
+  <section id="skills">
+    <h2>Skills</h2>
+    <ul>
+      <li><strong>Cloud:</strong> AWS (EC2, S3, VPC, IAM, CloudWatch, CloudFormation, Auto Scaling)</li>
+      <li><strong>DevOps:</strong> Jenkins, GitHub Actions, Docker, Kubernetes, ELB, EBS, SNS</li>
+      <li><strong>Automation:</strong> Terraform, Ansible, Shell Scripting, Python</li>
+      <li><strong>Monitoring:</strong> Prometheus, Nagios, Amazon CloudWatch, Grafana</li>
+      <li><strong>Version Control:</strong> Git, GitHub, GitLab, Bitbucket</li>
+    </ul>
+  </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Server Health Monitor & Auto Healing</h3>
-            <p>Implemented real-time server monitoring using Prometheus and CloudWatch. Integrated alerting with SNS and Slack. Configured auto-healing using EC2 Auto Scaling.</p>
-        </div>
-        <div class="project">
-            <h3>CI/CD Pipeline Automation</h3>
-            <p>Designed robust pipelines using Jenkins and GitHub Actions for application builds, testing, and deployment. Integrated Docker containers and Terraform for seamless infrastructure updates.</p>
-        </div>
-        <div class="project">
-            <h3>User & Group Management System</h3>
-            <p>Developed Bash scripts for automated creation and management of users and groups on Linux systems, with role-based access and logging.</p>
-        </div>
-    </section>
+  <section id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+      <h3>LAMP Auto Deployment</h3>
+      <p>Automated deployment of LAMP stack (Linux, Apache, MySQL, PHP) using Ansible. Includes server configuration, website deployment, SSL setup, and CI/CD integration.</p>
+      <img src="https://raw.githubusercontent.com/Ruchitha829/Ruchitha829.github.io/main/images/lamp.png" alt="LAMP Auto Deploy" class="project-img">
+    </div>
+    <div class="project">
+      <h3>Linux System Resource Monitor</h3>
+      <p>Built a Bash-based monitoring tool to track system performance metrics like CPU, memory, disk usage, and logs. Configured alerting and dashboard visualization using Prometheus and Grafana.</p>
+      <img src="https://raw.githubusercontent.com/Ruchitha829/Ruchitha829.github.io/main/images/system-monitor.png" alt="System Monitor" class="project-img">
+    </div>
+    <div class="project">
+      <h3>User Process Tracker</h3>
+      <p>Developed a Linux script to monitor and log active users, their process activity, and resource consumption. Ideal for system auditing and access tracking in multi-user environments.</p>
+      <img src="https://raw.githubusercontent.com/Ruchitha829/Ruchitha829.github.io/main/images/user-tracker.png" alt="User Process Tracker" class="project-img">
+    </div>
+  </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a></p>
-        <p>Phone: +91 6303476240 / +91 8340894285</p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/ruchitha-r-423409274" target="_blank">ruchitha-r-423409274</a></p>
-        <a href="mailto:ruchithakatakm99@gmail.com" class="contact-button">Let's Connect</a>
-    </section>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a></p>
+    <p>Phone: +91 6303476240 / +91 8340894285</p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/ruchitha-r-423409274" target="_blank">ruchitha-r-423409274</a></p>
+    <a href="mailto:ruchithakatakm99@gmail.com" class="contact-button">Let's Connect</a>
+  </section>
 
-    <footer>
-        <p>&copy; 2025 Ruchitha. All rights reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Ruchitha. All rights reserved.</p>
+  </footer>
 </body>
 
 </html>
