--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       transform: translateY(-5px);
     }
 
-    .resume-button, .contact-button {
+    .contact-button {
       background-color: #38bdf8;
       color: #0f172a;
       padding: 0.75rem 1.5rem;
@@ -83,7 +83,7 @@
       transition: background-color 0.3s;
     }
 
-    .resume-button:hover, .contact-button:hover {
+    .contact-button:hover {
       background-color: #0ea5e9;
     }
 
@@ -104,7 +104,7 @@
 <body>
   <header>
     <h1>Ruchitha</h1>
-    <p>DevOps & Site Reliability Engineer | Cloud Infrastructure | Automation Enthusiast</p>
+    <p>DevOps & Site Reliability Engineer | Passionate about Cloud Automation & System Reliability</p>
     <nav>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
@@ -115,18 +115,19 @@
 
   <section id="about">
     <h2>About Me</h2>
-    <p>I am a dedicated DevOps/SRE Engineer with a strong passion for building robust systems. I specialize in AWS, CI/CD pipelines, infrastructure as code, and proactive monitoring. My goal is to ensure stability and rapid delivery across cloud-native environments. I’m always eager to learn and automate everything possible to reduce toil and enhance scalability.</p>
-    <a href="Ruchitha_Resume.pdf" class="resume-button" target="_blank">Download Resume</a>
+    <p>I am a curious and committed DevOps/Site Reliability Engineer with a strong foundation in cloud infrastructure, system monitoring, and deployment automation. My experience includes working with AWS, Linux, CI/CD tools, and infrastructure as code (IaC). I enjoy solving system challenges through scripting and automation and have built real-time monitoring and deployment solutions from scratch.</p>
+    <p>My professional interest lies in building scalable, observable systems that recover gracefully from failure. I follow SRE principles like reducing toil, enhancing system uptime, and embracing a blameless culture for incident response. My goal is to continuously learn, automate, and contribute to reliable software delivery processes in modern cloud environments.</p>
   </section>
 
   <section id="skills">
     <h2>Skills</h2>
     <ul>
-      <li><strong>Cloud:</strong> AWS (EC2, S3, VPC, IAM, CloudWatch, CloudFormation, Auto Scaling)</li>
-      <li><strong>DevOps:</strong> Jenkins, GitHub Actions, Docker, Kubernetes, ELB, EBS, SNS</li>
-      <li><strong>Automation:</strong> Terraform, Ansible, Shell Scripting, Python</li>
-      <li><strong>Monitoring:</strong> Prometheus, Nagios, Amazon CloudWatch, Grafana</li>
+      <li><strong>Cloud Platforms:</strong> AWS (EC2, S3, CloudFormation, IAM, VPC, SNS, CloudWatch)</li>
+      <li><strong>DevOps & SRE Tools:</strong> Jenkins, GitHub Actions, Docker, Kubernetes, ELB, Auto Scaling</li>
+      <li><strong>Monitoring & Logging:</strong> Prometheus, Grafana, Nagios, Amazon CloudWatch</li>
+      <li><strong>Automation & Scripting:</strong> Terraform, Ansible, Shell Script, Python</li>
       <li><strong>Version Control:</strong> Git, GitHub, GitLab, Bitbucket</li>
+      <li><strong>Other:</strong> Maven, Linux Admin, Agile Practices</li>
     </ul>
   </section>
 
@@ -134,31 +135,31 @@
     <h2>Projects</h2>
     <div class="project">
       <h3>LAMP Auto Deployment</h3>
-      <p>Automated deployment of LAMP stack (Linux, Apache, MySQL, PHP) using Ansible. Includes server configuration, website deployment, SSL setup, and CI/CD integration.</p>
+      <p>This project automates the deployment of a full LAMP stack using Ansible playbooks. It includes server configuration, database setup, secure SSL configuration, and GitHub-based CI/CD for automatic updates. This project reflects my interest in full lifecycle deployment automation and infrastructure orchestration.</p>
       <img src="https://raw.githubusercontent.com/Ruchitha829/Ruchitha829.github.io/main/images/lamp.png" alt="LAMP Auto Deploy" class="project-img">
     </div>
     <div class="project">
       <h3>Linux System Resource Monitor</h3>
-      <p>Built a Bash-based monitoring tool to track system performance metrics like CPU, memory, disk usage, and logs. Configured alerting and dashboard visualization using Prometheus and Grafana.</p>
+      <p>Developed a Bash and Prometheus-based system resource monitor that tracks CPU, memory, and disk usage. Integrated with Grafana for visual dashboards and alerting. This tool helps in proactive monitoring and improving system observability.</p>
       <img src="https://raw.githubusercontent.com/Ruchitha829/Ruchitha829.github.io/main/images/system-monitor.png" alt="System Monitor" class="project-img">
     </div>
     <div class="project">
       <h3>User Process Tracker</h3>
-      <p>Developed a Linux script to monitor and log active users, their process activity, and resource consumption. Ideal for system auditing and access tracking in multi-user environments.</p>
+      <p>A Linux tool that logs active user sessions and their running processes. Ideal for multi-user systems where auditability and transparency of usage is key. Implemented logging and filtering features for root-cause analysis and reporting.</p>
       <img src="https://raw.githubusercontent.com/Ruchitha829/Ruchitha829.github.io/main/images/user-tracker.png" alt="User Process Tracker" class="project-img">
     </div>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a></p>
-    <p>Phone: +91 6303476240 / +91 8340894285</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/ruchitha-r-423409274" target="_blank">ruchitha-r-423409274</a></p>
+    <p>📧 Email: <a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a></p>
+    <p>📞 Phone: +91 6303476240 / +91 8340894285</p>
+    <p>🔗 LinkedIn: <a href="https://linkedin.com/in/ruchitha-r-423409274" target="_blank">ruchitha-r-423409274</a></p>
     <a href="mailto:ruchithakatakm99@gmail.com" class="contact-button">Let's Connect</a>
   </section>
 
   <footer>
-    <p>&copy; 2025 Ruchitha. All rights reserved.</p>
+    <p>&copy; 2025 Ruchitha. Made with passion for clean infrastructure and resilient systems.</p>
   </footer>
 </body>
 
